Resolve conflict when merging with development branch and fix lisa logic and api spec for using lisa for validating result from ocr
